--- a/_posts/2018-02-06-openpose.md
+++ b/_posts/2018-02-06-openpose.md
@@ -1,16 +1,42 @@
 ---
-title: Openpose
+title: Human pose detection
 published: true
 tags: computer-vision human pose-estimation stable-diffusion blender
 ---
->  state of the art approach for real-time human pose estimation - [Github](https://github.com/CMU-Perceptual-Computing-Lab/openpose)
+>  [Pose Estimation Algorithms: History and Evolution](https://blog.roboflow.com/pose-estimation-algorithms-history/)
+
+- [Human pose estimation using Deep Learning in OpenCV](https://cv-tricks.com/pose-estimation/using-deep-learning-in-opencv/)
+
+## YOLO
+
+Pytorch model see [Running pre-trained YOLO model in OpenCV](https://docs.opencv.org/4.x/da/d9d/tutorial_dnn_yolo.html)
+
+- [YOLOv8](https://github.com/And-Ocean/YOLOv8-pose)
+- [YOLOv7 Pose vs MediaPipe in Human Pose Estimation](https://learnopencv.com/yolov7-pose-vs-mediapipe-in-human-pose-estimation/)
+
+## OpenPose
+
+State of the art approach for real-time human pose estimation - [Github](https://github.com/CMU-Perceptual-Computing-Lab/openpose)
+
 
 - [Complete OpenPose guide [Updated Mar 2024]](https://www.ikomia.ai/blog/complete-openpose-guide)
 - [Understanding OpenPose (with code reference)— Part 1](https://medium.com/analytics-vidhya/understanding-openpose-with-code-reference-part-1-b515ba0bbc73)
 
 - [Deep Learning based Human Pose Estimation using OpenCV](https://learnopencv.com/deep-learning-based-human-pose-estimation-using-opencv-cpp-python/) - code example
     
+
+### Running from [OpenCV DNN]({% post_url 2023-03-10-opencv-dnn-module %}))
+
+It's already part of [opencv//samples/dnn/](https://github.com/opencv/opencv/blob/4.x/samples/dnn/openpose.cpp)
+
+see 
+- [use of pretrained openpose networks with opencv's dnn module (OpenCv)](https://docs.opencv.org/4.x/d7/d4f/samples_2dnn_2openpose_8cpp-example.html)
+	- [Multi Person Pose Estimation in OpenCV using OpenPose](https://learnopencv.com/multi-person-pose-estimation-in-opencv-using-openpose/)
+    - [samples/dnn/openpose.cpp](https://docs.opencv.org/4.x/d7/d4f/samples_2dnn_2openpose_8cpp-example.html)
+
 ### [Installation](https://github.com/CMU-Perceptual-Computing-Lab/openpose/blob/master/doc/installation/0_index.md#openpose-doc---installation)
+
+Not successfull.
 
 - [Ubuntu](https://github.com/tramper2/openpose/blob/master/doc/installation.md#ubuntu)
 
@@ -44,15 +70,6 @@ Call Stack (most recent call first):
 
 {% endhighlight %}
 
-### Running from [OpenCV DNN]({% post_url 2023-03-10-opencv-dnn-module %}))
-
-It's already part of [opencv//samples/dnn/](https://github.com/opencv/opencv/blob/4.x/samples/dnn/openpose.cpp)
-
-see 
-- [use of pretrained openpose networks with opencv's dnn module (OpenCv)](https://docs.opencv.org/4.x/d7/d4f/samples_2dnn_2openpose_8cpp-example.html)
-	- [Multi Person Pose Estimation in OpenCV using OpenPose](https://learnopencv.com/multi-person-pose-estimation-in-opencv-using-openpose/)
-    - [samples/dnn/openpose.cpp](https://docs.opencv.org/4.x/d7/d4f/samples_2dnn_2openpose_8cpp-example.html)
-
 ### see also
 - [Coral PoseNet](https://github.com/google-coral/project-posenet?tab=readme-ov-file#coral-posenet)
 - [Using OpenPose with Stable Diffusion](https://machinelearningmastery.com/openpose-with-stable-diffusion/)
@@ -60,5 +77,6 @@ see
     	- [Civitai Guide to ControlNet – Part I – Basics](https://education.civitai.com/civitai-guide-to-controlnet/)
 - [Using MPFB to Pose for Stable Diffusion](https://static.makehumancommunity.org/mpfb/docs/openpose.html)
 	- [ControlNet: A Complete Guide](https://stable-diffusion-art.com/controlnet/) - a neural network that controls image generation in Stable Diffusion by adding extra conditions.
+  - [How to Use Open Pose & ControlNet in Stable Diffusion](https://www.nextdiffusion.ai/tutorials/how-to-use-open-pose-controlnet-in-stable-diffusion)
 
 [![caption](https://assets-global.website-files.com/645cec60ffb18d5ebb37da4b/655f6bd3bebc9ae6340764a7_openpose_base.jpg)](https://www.ikomia.ai/blog/complete-openpose-guide)
