--- a/_posts/2020-07-16-treetop.md
+++ b/_posts/2020-07-16-treetop.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Treetop (parser)
-tags: ruby parser
+tags: ruby parser AST
 ---
 > Treetop is a Ruby library that allows you to create parsers easily by describing them using a Parsing Expression Grammar (PEG). - [A quick intro](http://thingsaaronmade.com/blog/a-quick-intro-to-writing-a-parser-using-treetop.html)
 
