--- a/_posts/2019-04-27-opencv.md
+++ b/_posts/2019-04-27-opencv.md
@@ -41,6 +41,7 @@ sudo apt install libgtk-3-dev	# make sure you have prerequesite installed before
 cd opencv
 mkdir build
 cd build
+
 cmake -D CMAKE_BUILD_TYPE=RELEASE \
 -D CMAKE_INSTALL_PREFIX=/usr/local \
 -D OPENCV_GENERATE_PKGCONFIG=ON \
@@ -78,6 +79,8 @@ cmake .
 make -j6
 
 ./cpp/cpp-example-edge	# If the sample runs, then the C++ libraries are properly installed.
+
+pkg-config --cflags opencv4		# to reference opencv in meson/ninja/cmake
 {% endhighlight %}
 
 ### [Docker Build from source](https://github.com/yduf/opencv-docker)
